<resources>
    <string name="app_name" translatable="false">Student</string>
    <string name="PleaseWait">Please wait</string>
    <string name="Email_or_password_is_incorrect">Email or password is incorrect</string>
    <string name="Sign_up">Sign up</string>
    <string name="Sign_in">Sign in</string>
    <string name="Searchforaproject">Search for a project</string>
    <string name="Uploadaproject">Upload a project</string>
    <string name="title_activity_host">HostActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SearchProjects">Search projects</string>
    <string name="Uploadproject">Upload project</string>
    <string name="PurchasedProjects">Purchased Projects</string>
    <string name="MyProjects">My Projects</string>
    <string name="SettingsFragment">Settings</string>
    <string name="logout">Logout</string>
    <string name="UploadProjectPictureButton">Upload Project Picture Button</string>
    <string name="UploadProjectName">Project Name</string>
    <string name="UploadProjectDetails">Project Details</string>
    <string name="UploadPhoneNumber">Phone Number</string>
    <string name="UploadProjectPrice">Project Price</string>
    <string name="UploadProjectButton">Upload Project</string>
    <string name="SubmitProject">Submit Project</string>
</resources>
