<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/SearchProjects">

    <fragment
            android:id="@+id/SearchProjects"
            android:name="com.rakanajlouni.student.views.fragments.SearchProjects"
            android:label="@string/SearchProjects"
            tools:layout="@layout/fragment_search_projects" />

    <fragment
            android:id="@+id/Uploadproject"
            android:name="com.rakanajlouni.student.views.fragments.UploadProjects"
            android:label="@string/Uploadproject"
            tools:layout="@layout/fragment_upload_projects" />

    <fragment
            android:id="@+id/PurchasedProjects"
            android:name="com.rakanajlouni.student.views.fragments.PurchasedProjects"
            android:label="@string/PurchasedProjects"
            tools:layout="@layout/fragment_purchased_projects" />

    <fragment
            android:id="@+id/MyProjects"
            android:name="com.rakanajlouni.student.views.fragments.MyProjects"
            android:label="@string/MyProjects"
            tools:layout="@layout/fragment_my_projects" />

    <fragment
            android:id="@+id/SettingsFragment"
            android:name="com.rakanajlouni.student.views.fragments.SettingsFragment"
            android:label="@string/SettingsFragment"
            tools:layout="@layout/fragment_settings" />

    <fragment
            android:id="@+id/nav_send"
            android:label="@string/logout"/>
</navigation>