<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".views.fragments.UploadProjects">

    <!-- TODO: Update blank fragment layout -->
    <TextView
            android:id="@+id/header_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Uploadaproject"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />

    <ImageView
            android:id="@+id/upload_project_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher" />

    <Button
            android:id="@+id/upload_project_picture_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/UploadProjectPictureButton"/>

    <Spinner
            android:id="@+id/upload_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <EditText
            android:id="@+id/upload_project_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/UploadProjectName"/>

    <EditText
            android:id="@+id/upload_project_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/UploadProjectDetails" />

    <EditText
            android:id="@+id/upload_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/UploadPhoneNumber"/>

    <EditText
            android:id="@+id/upload_project_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/UploadProjectPrice"/>

    <Button
            android:id="@+id/upload_project_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/UploadProjectButton"/>

    <Button
            android:id="@+id/submit_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SubmitProject"/>


</LinearLayout>